v1.1.0, switch to Java 17, without enable-preview